feat: add query api
Add calling prometheus interface
